# fullstack-template

./: .env-example  .env.test-compose  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  lefthook.yml
.claude/skills/: add-crud.md  add-module.md
backend/: .dockerignore  .env-example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_05_16_0041-77d9d82648ee_add_users_table.py  2024_05_17_0001-add_items_table.py  2024_05_18_0001-add_refresh_tokens_table.py  2024_05_19_0001-add_index_items_owner_id.py
backend/requirements/: dev.txt  prod.txt
backend/scripts/: wait_for_db.py
backend/src/: main.py
backend/src/auth/: constants.py  cookies.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  security.py
backend/src/core/models/: base.py
backend/src/core/repository/: base.py
backend/src/core/schemas/: base.py
backend/src/health/: router.py
backend/src/items/: models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_items.py
docs/: deploy-vps.md  frontend-known-issues.md
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  biome.json  knip.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: proxy.ts  (+1 more)
scripts/: init_env.py  rename.py
(+76 files in other folders)
